# ITMO

./: PucchF3EstimateCorrPower_aggressive.cpp  PucchF3EstimateCorrPower_avx.cpp  PucchF3EstimateCorrPower_avx_correct.cpp  PucchF3EstimateCorrPower_avx_final.cpp  PucchF3EstimateCorrPower_avx_safe.cpp  PucchF3EstimateCorrPower_avx_simple.cpp  PucchF3EstimateCorrPower_avx_step_by_step.cpp  PucchF3EstimateCorrPower_final.cpp  PucchF3EstimateCorrPower_final_opt.cpp  PucchF3EstimateCorrPower_fma.cpp  PucchF3EstimateCorrPower_optimized.cpp  README.md  optimization_explanation.md
Dronoport/: README.md  main.py  requirements.txt  tz.txt
Dronoport/agents/: __init__.py  base_agent.py  double_q_learning.py  expected_sarsa.py  mcts_agent.py  prospect_agent.py  q_learning.py  sarsa.py  ucb_agent.py
Dronoport/config/: config.py
Dronoport/demo/: demo.ipynb  lambda.ipynb
Dronoport/environment/: __init__.py  drone_env.py  obstacles.py  wind.py
Dronoport/evaluation/: evaluator.py
Dronoport/training/: trainer.py
Dronoport/utils/: __init__.py  discretizer.py  hyperopt.py
Dronoport/visualization/: __init__.py  plots.py
cpp/: PucchF3EstimateCorrPower.cpp  PucchF3EstimateCorrPower.h
cpp/asm/: Makefile  README.md  hex_print.asm  x86_task.c
cpp/cpp_2term/hw_2/: 123.c  CMakeLists.txt  GIMP 2.10.34.lnk  main.c
database/hw2/: ddl.sql  dml.sql  erm.drawio  (+1 more)
frontend/: README.md
haskell/: .gitignore
interview_coach/: .gitignore  README.md  input.txt  main.py  requirements.txt
java/: README.md
java-advanced/: README.md
paradimgs/: README.md
statistics/: solution.xlsx
(+469 files in other folders)
